2006-08-19  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: 
	mention side pane and bottom pane
	mention tag list in section on programming features
	reworded a number of titles

=== gedit 2.15.7 ===

2006-08-12  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation by María Majadas.

=== gedit 2.15.6 ===

=== gedit 2.15.5 ===

2006-07-23  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* sv/*.xml: Removed obsolete files.
	* Makefile.am: Added sv to DOC_LINGUAS.

2006-07-14 Joachim Noreiko <jnoreiko@yahoo.com>

	* C/figures/gedit_window.png: update screenshot for Clearlooks (taken on 2.14)
	* C/gedit.xml: 
	  rewrite section on tabs
	  rewrite section on finding, added material on incremental search

2006-07-13 Joachim Noreiko <jnoreiko@yahoo.com>

	* C/gedit.xml: reorder sections of the manual

=== gedit 2.15.4 ===

2006-06-17 Joachim Noreiko <jnoreiko@yahoo.com>

	* C/gedit.xml: clean up to remove any out of date material

2006-06-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es/es.po: Updated Spanish translation.

2006-06-04  Paolo Borelli  <pborelli@katamail.com>

	* C/gedit.xml: patch from Dean Sas to standardize title and abstract.

=== gedit 2.15.2 ===

=== gedit 2.15.1 ===

2006-03-01  Alexander Shopov  <ash@contact.bg>

	* Makefile.am:
	* bg/figures/gedit_window.png
	* bg/bg.po
	Added Bulgarian translation by
	Rostislav Raykov <zbrox@i-space.org>

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* fr/fr.po: small update

2005-12-18  Michael Terry  <mterry@cvs.gnome.org>

	* Add ChangeLog, gedit.omf.in, and Makefile.am

	In de, es, fr, it, ja, zh_CN, zh_HK, and zh_TW subdirs:
	* Remove gedit-??.omf, gedit.xml, legal.xml, and Makefile.am
	* Add ??.po

	Convert to gnome-doc-utils (bug #318486)