@@ -1,3 +1,11 @@
+2006-08-21  Joachim Noreiko  <jnoreiko@yahoo.com>
+
+	* C/gedit.xml: 
+    new section on the Snippets plugin
+    rewritten intro
+    tidied up section on Find & Replace Special Characters
+    standardized titles
+
 2006-08-19  Joachim Noreiko  <jnoreiko@yahoo.com>
 
 	* C/gedit.xml: 
